feat: Implemente a route for retrieve services information
